--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 {% load static %}
-
+<link rel="stylesheet" href="{% static 'styles/login.css' %}">
 <h1>{{ title }}</h1>
 
 <img src="{% static 'fazt.png' %}" alt="" width="70">
