--- a/myapp/templates/grafica_view.html
+++ b/myapp/templates/grafica_view.html
@@ -1,3 +1,14 @@
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'styles/formdata.css' %}">
+    <title>Document</title>
+</head>
+<body>
+    
 {# grafica_view.html #}
 
 <div id="plotly-chart"></div>
@@ -8,4 +19,8 @@
     var data = graph.data;
     Plotly.newPlot('plotly-chart', data, layout, {displayModeBar: false, onclick: false});
 </script>
+</body>
+</html>
+
+
 
