--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'styles/home.css' %}">
+        <link rel="stylesheet" href="{% static 'styles/login.css' %}">
     <title>Login</title>
 </head>
 
@@ -71,7 +71,7 @@
 
     <script type="module" src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.9.0/firebase-auth.js"></script>
-    <link rel="stylesheet" href="{% static 'js/js.css' %}">
+    <link rel="stylesheet" href="{% static 'js/login.js' %}">
 
 </body>
 {% block content %}
