--- a/loginSignup/base/templates/home.html
+++ b/loginSignup/base/templates/home.html
@@ -79,7 +79,7 @@
             <div class="boxes">
                 <div class="box">
                     <div class="icon">
-                        <i class="fas fa-chart-line"></i>
+                        <i class="fas fa-wave-square"></i>
                     </div>
                     <div class="topic">Pulso</div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui
@@ -87,9 +87,9 @@
                 </div>
                 <div class="box">
                     <div class="icon">
-                        <i class="fas fa-chart-line"></i>
+                        <i class="fas fa-chart-area"></i>
                     </div>
-                    <div the="topic">Triangulares</div>
+                    <div class="topic">Triangulares</div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui
                         voluptatem eligendi?</p>
                 </div>
