--- a/loginSignup/base/templates/registration/login.html
+++ b/loginSignup/base/templates/registration/login.html
@@ -25,13 +25,28 @@
                     <h2>Hola, de nuevo</h2>
                     <p>Estamos contentos de tenerte de vuelta.</p>
                 </div>
-                <form method="POST">
+                <form method="POST" class="mt-3">
                     {% csrf_token %}
-                    {{ form.as_p }}
-                    <div class="input-group mb-3">
-                        <button id="loginbt" class="btn btn-lg btn-primary w-100 fs-6">Iniciar sesión</button>
+                    <div class="mb-3">
+                        {% for field in form %}
+                            <label class="form-label">{{ field.label }}</label>
+                            {{ field }}
+                            {% if field.errors %}
+                                <div class="text-danger">
+                                    {% for error in field.errors %}
+                                        {{ error }}
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
+                            {% if field.help_text %}
+                                <div class="form-text">{{ field.help_text }}</div>
+                            {% endif %}
+                        {% endfor %}
+
                     </div>
+                    <button id="loginbt" class="btn btn-lg btn-primary w-100 fs-6 mt-3">Iniciar sesión</button>
                 </form>
+                
                 <div class="row">
                     <small>¿No tienes una cuenta? <a href="{% url 'base:authView' %}">Regístrate</a></small>
                 </div>
