--- a/loginSignup/base/templates/index.html
+++ b/loginSignup/base/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -85,9 +86,29 @@
                 </div>
             </div>
         </div>
+
+        <div class="centrado-grafica">
+            <div id="slider-container" style="position: absolute; left: 1; top: 0;">
+            </div>
+            <div id="canvas-container" style="position: absolute; left: 0; right: 0; margin: auto;">
+            </div>
+        </div>
+        
     </section>
 
+
+    
+    <!-- Referencias a p5.js y tu archivo JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+
     <script src="{% static 'js/index.js' %}"></script>
+    <script src="{% static 'js/pulso.js' %}"></script>
+
 </body>
 
 </html>
