--- a/loginSignup/base/templates/registration/login.html
+++ b/loginSignup/base/templates/registration/login.html
@@ -56,8 +56,5 @@
     </div>
 </div>
 
-<script type="module" src="js/login.js"></script>
-<script src="{% static 'js/login.js'}" type="module"></script>
-
-
+<script src="{% static 'js/login.js' %}"></script>
 {% endblock content %}
