--- a/loginSignup/base/templates/registration/login.html
+++ b/loginSignup/base/templates/registration/login.html
@@ -44,7 +44,9 @@
                         {% endfor %}
 
                     </div>
-                    <button id="loginbt" class="btn btn-lg btn-primary w-100 fs-6 mt-3">Iniciar sesión</button>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-lg btn-primary w-100 fs-6">Iniciar sesión</button>
+                    </div>
                 </form>
                 
                 <div class="row">
@@ -56,5 +58,8 @@
     </div>
 </div>
 
-<script src="{% static 'js/login.js' %}"></script>
+<script type="module" src="js/login.js"></script>
+<script src="{% static 'js/login.js'}" type="module"></script>
+
+
 {% endblock content %}
