--- a/loginSignup/base/templates/registration/login.html
+++ b/loginSignup/base/templates/registration/login.html
@@ -58,7 +58,8 @@
     </div>
 </div>
 
-<script src="{% static 'js/login.js'}" type="module"></script>
-
-
 {% endblock content %}
+
+{% block extra_js %}
+<script src="{% static 'js/login.js'}" type="module"></script>
+{% endblock extra_js %}
