--- a/loginSignup/base/templates/prueba_data.html
+++ b/loginSignup/base/templates/prueba_data.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <title>MathPou</title>
 </head>
 <body>
@@ -49,6 +53,7 @@
             </div>
         </div>
     </div>
+    
     {% endblock content %}
 
     <!-- Referencias a p5.js y otras librerías -->
