Añadí el script para periodos y modifique el codigo para su uso

--- a/loginSignup/base/templates/prueba_data.html
+++ b/loginSignup/base/templates/prueba_data.html
@@ -37,6 +37,10 @@
                     <input type="number" name="tiempo" class="tiempo">
                 </div>
 
+                <div class="inputs_charts_Periodo">
+                    <label for="periodo">Periodo:</label>
+                    <input type="number" name="periodo" class="periodo">
+                </div>
                 <div class="button_create_new">
                     <button type="button" id="crear">Crear</button>
                     <button type="button" id="btn_generar">Generar gráfica</button>
