--- a/loginSignup/base/templates/navbar.html
+++ b/loginSignup/base/templates/navbar.html
@@ -14,23 +14,19 @@
 
             <li><a href="{% url 'base:prueba-grafica' %}">
                     <i class="uil uil-files-landscapes"></i>
-                    <span class="link-name">Prueba Grafica</span>
-                </a></li>
-
-            <li><a href="{% url 'base:show-signal-data' %}">
-                    <i class="uil uil-chart"></i>
-                    <span class="link-name">Ejemplos</span>
-                </a></li>
-
-            <li><a href="{% url 'base:signal-data' %}">
-                    <i class="uil uil-chart"></i>
-                    <span class="link-name">Verificar Datos</span>
+                    <span class="link-name">Gráficas de Ondas</span>
                 </a></li>
 
             <li><a href="{% url 'base:prueba-data' %}">
-                    <i class="uil uil-comment-exclamation"></i>
-                    <span class="link-name">Tabla Prueba</span>
+                    <i class="uil uil-chart"></i>
+                    <span class="link-name">Datos para gráfica</span>
                 </a></li>
+
+            <li><a href="{% url 'base:show-signal-data' %}">
+                    <i class="uil uil-comment-exclamation"></i>
+                    <span class="link-name">Ejemplos</span>
+                </a></li>
+
         </ul>
 
         <ul class="logout-mode">
