--- a/loginSignup/base/templates/prueba_grafica.html
+++ b/loginSignup/base/templates/prueba_grafica.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% block content %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.15.4/katex.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.15.4/katex.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.15.4/contrib/auto-render.min.js"></script>
-
 
     <title>MathPou</title>
 </head>
