Cambios en el pulso.js

--- a/loginSignup/base/templates/prueba_grafica.html
+++ b/loginSignup/base/templates/prueba_grafica.html
@@ -39,15 +39,15 @@
                 <button type="button" id="ejem1">Ver</button>
             </div>
             <div class="menu-item">
-                <h3>Ejemplo num 2</h3>
+                <h3>Señal Triangular</h3>
                 <button type="button" id="ejem2">Ver</button>
             </div>
             <div class="menu-item">
-                <h3>Ejemplo num 3</h3>
+                <h3>Señal Cuadrada</h3>
                 <button type="button" id="ejem3">Ver</button>
             </div>
             <div class="menu-item">
-                <h3>Ejemplo num 4</h3>
+                <h3>Señal Sierra</h3>
                 <button type="button" id="ejem4">Ver</button>
             </div>
         </div>
