--- a/loginSignup/base/templates/registration/signup.html
+++ b/loginSignup/base/templates/registration/signup.html
@@ -4,47 +4,46 @@
 {% block content %}
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
     <div class="row border rounded-5 p-3 bg-white shadow box-area">
-        <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box"
-            style="background: #2271FF;">
+        <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #2271FF;">
             <div class="featured-image mb-3">
-                <img src="{% static 'img/register.svg' %}" class="img-fluid" style="width: 250px;">
+                <img src="{% static 'img/log.svg' %}" class="img-fluid" style="width: 250px;">
             </div>
-            <p class="text-white fs-2" style="font-family: 'Courier New', Courier, monospace; font-weight: 600;">
-                MathPou</p>
-            <small class="text-white text-wrap text-center"
-                style="width: 17rem;font-family: 'Courier New', Courier, monospace;">Simulador Fourier para estudiantes de ingeniería.</small>
+            <p class="text-white fs-2" style="font-family: 'Courier New', Courier, monospace; font-weight: 600;">MathPou</p>
+            <small class="text-white text-wrap text-center" style="width: 17rem;font-family: 'Courier New', Courier, monospace;">Simulador Fourier para estudiantes de ingeniería.</small>
         </div>
-
         <div class="col-md-6 right-box">
             <div class="row align-items-center">
                 <div class="header-text mb-4">
-                    <h2>Registro</h2>
-                    <p>Estamos emocionados de tenerte aquí.</p>
+                    <h2>Crear una cuenta</h2>
+                    <p>Únete a nuestra comunidad.</p>
                 </div>
-                <form id="signup-form" method="POST">
+                <form method="POST" class="mt-3">
                     {% csrf_token %}
-                    {% for field in form %}
-                        <div class="form-group">
-                            <label>{{ field.label }}</label>
+                    <div class="mb-3">
+                        {% for field in form %}
+                            <label class="form-label">{{ field.label }}</label>
                             {{ field }}
-                            {% if field.help_text %}
-                            <small class="form-text text-muted"></small>
+                            {% if field.errors %}
+                                <div class="text-danger">
+                                    {% for error in field.errors %}
+                                        {{ error }}
+                                    {% endfor %}
+                                </div>
                             {% endif %}
-                        </div>
-                    {% endfor %}
+                            {% if field.help_text %}
+                                <div class="form-text">{{ field.help_text }}</div>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-lg btn-primary w-100 fs-6">Registrarse</button>
                     </div>
-                </form>                
-                <div class="row mt-3">
-                    <small>¿Ya eres miembro? <a href="{% url 'base:login' %}">Inicia Sesión</a></small>
+                </form>
+                <div class="row">
+                    <small>¿Ya tienes una cuenta? <a href="{% url 'login' %}">Inicia sesión</a></small>
                 </div>
             </div>
         </div>
     </div>
 </div>
 {% endblock content %}
-
-{% block extra_js %}
-<script src="{% static 'js/registro.js'}" type="module"></script>
-{% endblock extra_js %}
